fixed mission summary pargraph order on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -423,6 +423,7 @@ a > img:hover {
 
 .grid {
   grid-template-columns: 1fr;
+  grid-template-rows: 2;
 }
 
 .left > p, .right > p {
@@ -431,7 +432,7 @@ a > img:hover {
 
 .left {
   grid-column-start: 1;
-  grid-row-start: 2;
+  grid-row-start: 1;
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 30px;
@@ -439,7 +440,7 @@ a > img:hover {
 
 .right {
   grid-column-start: 1;
-  grid-row-start: 1;
+  grid-row-start: 2;
   margin-left: 0;
 }
 
